// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NightingaleSeries AG-15782 styler highlights sequenced 1 1`] = `
[
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
]
`;

exports[`NightingaleSeries AG-15782 styler highlights sequenced 1 2`] = `
[
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-item",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "highlighted-item",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-series",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
]
`;

exports[`NightingaleSeries AG-15782 styler highlights sequenced 1 3`] = `[]`;

exports[`NightingaleSeries AG-15782 styler highlights sequenced 1 4`] = `
[
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-item",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "highlighted-item",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
]
`;

exports[`NightingaleSeries AG-15782 styler highlights sequenced 1 5`] = `[]`;

exports[`NightingaleSeries AG-15782 styler highlights sequenced 1 6`] = `
[
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-series",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-item",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "highlighted-item",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
]
`;

exports[`NightingaleSeries AG-15782 styler highlights sequenced 1 7`] = `[]`;

exports[`NightingaleSeries AG-15782 styler highlights sequenced 1 8`] = `
[
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-series",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "highlighted-series",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
]
`;

exports[`NightingaleSeries AG-15782 styler highlights sequenced 1 9`] = `
[
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-series",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "highlighted-series",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
]
`;

exports[`NightingaleSeries AG-15782 styler highlights single legendItem[0] 1`] = `
[
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "highlighted-series",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-series",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
]
`;

exports[`NightingaleSeries AG-15782 styler highlights single legendItem[1] 1`] = `
[
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-series",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "highlighted-series",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
]
`;

exports[`NightingaleSeries AG-15782 styler highlights single miss 1`] = `
[
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
]
`;

exports[`NightingaleSeries AG-15782 styler highlights single series[0].datum[0] 1`] = `
[
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-item",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "highlighted-item",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-series",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
]
`;

exports[`NightingaleSeries AG-15782 styler highlights single series[0].datum[2] 1`] = `
[
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-item",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "highlighted-item",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-series",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
]
`;

exports[`NightingaleSeries AG-15782 styler highlights single series[1].datum[0] 1`] = `
[
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#f3622d",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-series",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "unhighlighted-item",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "highlighted-item",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "#b07513",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
]
`;

exports[`NightingaleSeries AG-15782 styler init callbacks params 1`] = `
[
  [
    {
      "angleKey": "quarter",
      "context": {
        "name": "software context 1",
      },
      "cornerRadius": 0,
      "fill": "lime",
      "fillOpacity": 0.5,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "sw",
      "seriesId": "NightingaleSeries-1",
      "stackGroup": undefined,
      "stroke": "#aa4520",
      "strokeOpacity": 1,
      "strokeWidth": 1,
    },
  ],
  [
    {
      "angleKey": "quarter",
      "context": {
        "name": "hardware context 2",
      },
      "cornerRadius": 0,
      "fill": "#fba71b",
      "fillOpacity": 1,
      "highlightState": "none",
      "lineDash": [
        0,
      ],
      "lineDashOffset": 0,
      "radiusKey": "hw",
      "seriesId": "NightingaleSeries-2",
      "stackGroup": undefined,
      "stroke": "CornflowerBlue",
      "strokeOpacity": 0.5,
      "strokeWidth": 15,
    },
  ],
]
`;
